// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGroupItem renders a divider 1`] = `
.c2 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 0;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  bottom: 1px;
  left: calc(calc(100% - 90%) / 2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 90%;
  margin: 0 auto;
  z-index: 1;
  background: #E5E5E5;
  height: 1px;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 {
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c0:hover {
  z-index: 2;
}

.c0:last-child .c3 {
  display: none;
}

@media (min-width:512px) {

}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="block"
      elevation={0}
      shape="sharp"
    >
      <div>
        Test
      </div>
    </div>
    <div
      className="c3 c4"
    />
  </div>
</div>
`;

exports[`SelectGroupItem renders correctly 1`] = `
.c2 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 0;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 {
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c0:hover {
  z-index: 2;
}

@media (min-width:512px) {

}

<div
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="block"
      elevation={0}
      shape="sharp"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;
